CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Raspberry Pi
INCLUDE_DIRECTORIES(/opt/vc/include /opt/vc/include/interface/vcos/pthreads)
LINK_DIRECTORIES(/opt/vc/lib)
SET(RASPBERRYPI_LIBRARIES GLESv2 EGL bcm_host vcos vchiq_arm)

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(WebKitNix WebKitNix)
PKG_CHECK_MODULES(GLIB glib-2.0)
PKG_CHECK_MODULES(CAIRO cairo)
#PKG_CHECK_MODULES(LIBPROFILER libprofiler)

INCLUDE_DIRECTORIES(${WebKitNix_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${CAIRO_INCLUDE_DIRS})
LINK_DIRECTORIES(${WebKitNix_LIBRARY_DIRS} ${GLIB_LIBRARY_DIRS} ${CAIRO_LIBRARY_DIRS})

ADD_EXECUTABLE(Sample main.cpp)
TARGET_LINK_LIBRARIES(Sample ${WebKitNix_LIBRARIES} ${GLIB_LIBRARIES} ${CAIRO_LIBRARIES} ${RASPBERRYPI_LIBRARIES})
#TARGET_LINK_LIBRARIES(Sample ${WebKitNix_LIBRARIES} ${GLIB_LIBRARIES} ${CAIRO_LIBRARIES} ${RASPBERRYPI_LIBRARIES} ${LIBPROFILER_LIBRARIES})
